--- a/web/index.html
+++ b/web/index.html
@@ -200,9 +200,9 @@
   });
 
   $(document).ready(function () {
-    if (localStorage.getItem('finishedMainPageWalkthrough') == null) {
-      startIntro();
-    }
+    // if (localStorage.getItem('finishedMainPageWalkthrough') == null) {
+    //   startIntro();
+    // }
   });
 
   function startIntro() {
